<resources>
    <string name="app_name">Kindeed</string>
    <string name="create_account">create account</string>
    <string name="login">login</string>
    <string name="welcome_to_kindeed">Welcome to Kindeed</string>
    <string name="login_msg">Please log in</string>
    <string name="create_a_new_account">Create a new Account</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="com_auth0_client_id">nKrdCUOqTaT3yyH39I5deWJ6uNRnWpJG</string>
    <string name="com_auth0_domain">dev-uugk8azf.eu.auth0.com</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="logout">logout</string>
    <string name="description">Description</string>
    <string name="price_sample">5 EUR</string>
    <string name="sample_product_name">Bread</string>
    <string name="quantity">Qty</string>
    <string name="slogan">Sharing is caring</string>
    <string name="kindeed">Kindeed,</string>
    <string name="category">Category</string>
    <string name="image">Image</string>
    <string name="save">Save</string>
    <string name="add_new_product_msg">Add new Product</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="add_product">add product</string>
    <string name="perfect_with">Perfect with</string>
    <string name="add_to_basket">Add to basket</string>
    <string name="quantity_sample">1</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="place_order">Place Order</string>
    <string name="thanks_order">Thanks for your order.</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="profile">Profile</string>

    <string-array name="quantity_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5(Max)</item>
    </string-array>

</resources>
